--- a/client/src/assets/scss/Style.scss
+++ b/client/src/assets/scss/Style.scss
@@ -1,46 +1,43 @@
-$table-font-size:20;
-$table-header-backgroundcolor:green;
-$table-header-fontcolor:white;
+$table-font-size: 20;
+$table-header-backgroundcolor: green;
+$table-header-fontcolor: white;
 
 table {
-    width: 100%;
-    border-width: thin;
+	width: 100%;
+	border-width: thin;
 
-    thead {
-        background-color: $table-header-backgroundcolor;
-        color: $table-header-fontcolor;
-    }
+	thead {
+		background-color: $table-header-backgroundcolor;
+		color: $table-header-fontcolor;
+	}
 
-    tbody {
-        font-size: small;
-        padding: 2em;
-
-    }
+	tbody {
+		font-size: small;
+		padding: 2em;
+	}
 }
 
 div {
-    width: '100%';
+	width: '100%';
+	margin-left: 1%;
+	margin-right: 1%;
 }
 
 body {
-    margin-left: 1%;
+	margin-left: 1%;
+	margin-right: 1%;
 }
 
-
-
 button {
-
-    background-color: $table-header-backgroundcolor;
-    color: $table-header-fontcolor;
-    border-radius: 5em;
-    width: 30%;
-
-
+	background-color: $table-header-backgroundcolor;
+	color: $table-header-fontcolor;
+	border-radius: 5em;
+	width: 30%;
 }
 
 input {
-    border-radius: 5px;
-    margin-top: 2%;
-    line-height: 2em;
-    width: 30em;
+	border-radius: 5px;
+	margin-top: 2%;
+	line-height: 2em;
+	width: 30em;
 }
