Code Reafactor and Css Changes

--- a/client/src/assets/scss/Style.scss
+++ b/client/src/assets/scss/Style.scss
@@ -13,7 +13,13 @@ table {
 
 	tbody {
 		font-size: small;
-		padding: 2em;
+		text-align: center;
+		font-weight: bold;
+		:hover{
+			background-color:grey;
+			opacity: initial;
+			color: white;
+		}
 	}
 }
 
