--- a/client/src/assets/scss/css/Style.css
+++ b/client/src/assets/scss/css/Style.css
@@ -10,15 +10,25 @@ table thead {
 
 table tbody {
   font-size: small;
-  padding: 2em;
+  text-align: center;
+  font-weight: bold;
+}
+
+table tbody :hover {
+  background-color: grey;
+  opacity: initial;
+  color: white;
 }
 
 div {
   width: '100%';
+  margin-left: 1%;
+  margin-right: 1%;
 }
 
 body {
   margin-left: 1%;
+  margin-right: 1%;
 }
 
 button {
