Details Page and Saas Changes

--- a/client/src/assets/scss/Style.scss
+++ b/client/src/assets/scss/Style.scss
@@ -9,6 +9,7 @@ table {
 	thead {
 		background-color: $table-header-backgroundcolor;
 		color: $table-header-fontcolor;
+		font-size: 20px;
 	}
 
 	tbody {
