--- a/client/src/assets/scss/css/Style.css
+++ b/client/src/assets/scss/css/Style.css
@@ -6,10 +6,11 @@ table {
 table thead {
   background-color: green;
   color: white;
+  font-size: 20px;
 }
 
 table tbody {
-  font-size: small;
+  font-size: medium;
   text-align: center;
   font-weight: bold;
 }
